# forward_bot

./: .gitignore  Cargo.toml  Makefile.toml
openwrt/: config.toml  init.sh
src/: commands.rs  config.rs  handler.rs  main.rs
