[package]
name = "tg_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "ctrlc_handler", "macros", "tracing"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.8"
tracing = { version = "0.1.43", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
